name:                reflex-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sigrlami/reflex-playground#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright Sergey Bushnyak 2016
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable reflex-play
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , ghcjs-dom		     
                     , time
                     , random
                     , string-quote
                     , containers		     
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sigrlami/reflex-playground
